   versions of Ant.
   Bugzilla Report 36748.

 * globmapper didn't work properly if the "to" pattern didn't contain
   a "*".  In particular it implicitly added a * to the end of the
   pattern.  This is no longer the case.  If you relied on this
   behavior you will now need to explicitly specify the trailing *.
   Bugzilla Report 46506.

Fixed bugs:
-----------

 * Better handling of package-info.class. Bugzilla Report 43114.

 * RPM task needed an inserted space between the define and the value.
   bugzilla Report 46659.

 * Got rid of deadlock between in in, out and err in the Redirector. 
   Bugzilla Report 44544.

 * Caused by AssertionError no longer filtered. Bugzilla report 45631.
 
 * <zip> would sometimes recreate JARs unnecessarily. Bugzilla report 45902.

 * <symlink> task couldn't overwrite existing symlinks that pointed to nonexistent files
   Bugzilla report 38199.

 * <symlink> task couldn't overwrite files that were in the way of the symlink.
   Bugzilla report 43426.
   
 * <symlink> task failonerror="false" does not stop build from failing when 'ln' 
   command returns non-zero. Bugzilla report 43624  

 * <touch> task couldn't differentiate between "no resources specified" and "no resources
   matched."  Bugzilla report 43799.

 * ManifestClassPath throws when a relative path would traverse the file system root. Bugzilla
   report 44499.

 * <globmapper> had an indexoutofbounds when the prefix and postfix overlapped. Bugzilla report
   44731.
   
 * <typedef> and <taskdef> failed to accept file names with #
   characters in them.
   Bugzilla report 45190

 * A deadlock could occur if a BuildListener tried to access an Ant property
   within messageLogged while a different thread also accessed one.
   Bugzilla report 45194

 * Handle null result of system getProperty() in CommandlineJava.
   Similar to Bugzilla report 42334.

 * Length task did not process nonexistent Resources even though these might